--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 						<h5 class="item-title mbr-fonts-style display-4"></h5>
 						<p class="mbr-text mbr-fonts-style display-7">An Android App to Store and manage all your credit and debit cards effortlessly, whether you're online or offline, with advanced encryption and user-friendly features.
 						</p>
-						<div class="mbr-section-btn item-footer"><a href="https://play.google.com/store/apps/details?id=com.vishnurajan.mycardwallet" class="btn item-btn btn-primary display-7" target="_blank">Learn More</a></div>
+						<div class="mbr-section-btn item-footer"><a href="https://play.google.com/store/apps/details?id=com.vishnurajan.mycardwallet" class="btn item-btn btn-primary display-7" target="_blank">Sample App</a></div>
 					</div>
 				</div>
 			</div>
